[gd_scene load_steps=5 format=3 uid="uid://dqqh3nsm8c7i4"]

[ext_resource type="Script" uid="uid://bm36hv25qwae2" path="res://Code/enemy.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ncs30rlsq3wx" path="res://Scenes/skeleton_minion.tscn" id="2_1f0kj"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.384218
height = 1.3

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(1, 1.28694, 1.81421)

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(-1.5, 0, -2.26494e-07, 0, 1.5, 0, 2.26494e-07, 0, -1.5, 0, 0, 0)
collision_layer = 4
collision_mask = 53
script = ExtResource("1")

[node name="Skeleton_Minion" parent="." instance=ExtResource("2_1f0kj")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(-1.955, 0, -2.95197e-07, 0, 1.955, 0, 2.95197e-07, 0, -1.955, 0, 1.08, 0)
shape = SubResource("1")

[node name="AttackBox" type="Area3D" parent="."]
transform = Transform3D(1.69, 0, 0, 0, 1.69, 0, 0, 0, 1.69, 0, 0.685, -0.08)
collision_layer = 8

[node name="AttackCollision" type="CollisionShape3D" parent="AttackBox"]
transform = Transform3D(0.655, 0, 0, 0, 0.655, 0, 0, 0, 0.655, 0, 0.284, -0.375)
shape = SubResource("2")
debug_color = Color(0.979859, 0.141346, 0, 0.42)

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
